Add user as search argument

--- a/assets/less/modules/soul.less
+++ b/assets/less/modules/soul.less
@@ -22,7 +22,7 @@ div.tooltip.badge-tooltip {
         }
     }
 
-    input#users-search { width: 20rem; display: inline; }
+    input#users-search:not(.block) { width: 20rem; display: inline; }
 }
 
 .soul {
