--- a/templates/ajax/admin/towns/explorer.html.twig
+++ b/templates/ajax/admin/towns/explorer.html.twig
@@ -39,6 +39,7 @@
                         {{ _self.valuelist('Stadtname'|trans({},'admin'),  town.name) }}
                         {{ _self.valuelist('Sprache'|trans({},'admin'),    town.language) }}
                         {{ _self.valuelist('Typ'|trans({},'admin'),        town.type.label|trans({},'game')) }}
+                        {{ _self.valuelist('Ersteller'|trans({},'admin'),  town.creator ?? '--') }}
                         {{ _self.valuelist('Population'|trans({},'admin'), town.population) }}
                         {{ _self.valuelist('Saison'|trans({},'admin'),     town.season ? town.season.number : '--') }}
                         {{ _self.valuelist('Tag'|trans({},'admin'),        town.day) }}
