Added St Patricks & easter headers (#684)

--- a/assets/less/intl.less
+++ b/assets/less/intl.less
@@ -10,6 +10,14 @@ html.lang-base-en body.christmas #wrapper > #header { background-image: url('../
 html.lang-base-fr body.christmas #wrapper > #header { background-image: url('../img/background/header_xmas_fr.gif'); }
 html.lang-base-es body.christmas #wrapper > #header { background-image: url('../img/background/header_xmas_es.gif'); }
 
+html.lang-base-en body.stpatrick #wrapper > #header { background-image: url('../img/background/header_patrick_en.png'); }
+html.lang-base-fr body.stpatrick #wrapper > #header { background-image: url('../img/background/header_patrick_fr.png'); }
+html.lang-base-es body.stpatrick #wrapper > #header { background-image: url('../img/background/header_patrick_es.png'); }
+
+html.lang-base-en body.easter #wrapper > #header { background-image: url('../img/background/header_easter_en.png'); }
+html.lang-base-fr body.easter #wrapper > #header { background-image: url('../img/background/header_easter_fr.png'); }
+html.lang-base-es body.easter #wrapper > #header { background-image: url('../img/background/header_easter_es.png'); }
+
 html.lang-base-en .words-of-heroes { background-image: url('../img/background/town/cityBoard_en.png'); }
 html.lang-base-fr .words-of-heroes { background-image: url('../img/background/town/cityBoard_fr.png'); }
 html.lang-base-es .words-of-heroes { background-image: url('../img/background/town/cityBoard_es.png'); }
