--- a/assets/less/modules/events.less
+++ b/assets/less/modules/events.less
@@ -67,3 +67,11 @@ body.arma {
 body.christmas {
   #wrapper>#header { background: url(../../img/background/header_xmas_de.gif); }
 }
+
+body.stpatrick {
+    #wrapper>#header { background: url(../../img/background/header_patrick_de.png); }
+}
+
+body.easter {
+    #wrapper>#header { background: url(../../img/background/header_easter_de.png); }
+}
