--- a/assets/less/theme.less
+++ b/assets/less/theme.less
@@ -229,7 +229,7 @@ x-message {
   background: @myhordes-content-background; box-shadow: 0 0 20px black;
 
   &>#header {
-    &>#header-reload-area { position: absolute; left: 0; top: 0; height: 135px; width: 375px; cursor: pointer; }
+    &>#header-reload-area { position: absolute; left: 0; top: 0; height: 141px; width: 100%; cursor: pointer; }
     background: @myhordes-content-header-background; height: @myhordes-content-header-height;
     margin: 0 0 @myhordes-content-header-margin;
   }
