--- a/templates/ajax/soul/season.html.twig
+++ b/templates/ajax/soul/season.html.twig
@@ -63,10 +63,21 @@
                         {# @var town \src\Entity\TownRankingProxy #}
                         <div class="cell rw-1 center"><img src="{{ asset("build/images/lang/" ~ town.language ~".png") }}" alt="{{ town.language }}" /></div>
                         <div class="cell rw-1 center">{{ pos }}</div>
-                        <div class="cell rw-6 center"><img x-town-details="{{ town.id }}" x-town-toggle="{{ town.id }}" class="pointer" alt="+" src="{{ asset('build/images/icons/small_more.gif') }}" /><div class="tooltip help">{{ 'Die Liste der eingeschriebenen Spieler ansehen.'|trans({},'game') }}</div> {{ town.name }}</div>
+                        <div class="cell rw-6 center"><div class="inline-block"><img x-town-details="{{ town.id }}" x-town-toggle="{{ town.id }}" class="pointer" alt="+" src="{{ asset('build/images/icons/small_more.gif') }}" /><div class="tooltip help">{{ 'Die Liste der eingeschriebenen Spieler ansehen.'|trans({},'game') }}</div></div> {{ town.name }}</div>
                         <div class="cell rw-2 center">{{ town.days }}</div>
                         <div class="cell rw-2 center">{{ town.score }}</div>
                     </div>
+                    {% if pos == 1 %}
+                        <div class="row-flex stretch" x-town-latest="{{ town.id }}">
+                            <div class="cell rw-8 ro-2">
+                            {% for denizen in town.citizens|sort((a,b) => b.day <=> a.day) %}
+                            {% if denizen.day == town.days %}
+                                <a href="{{ path('soul_visit', {id: denizen.user.id}) }}"><b>{{ denizen.user.name }}</b></a> ({{ denizen.day }})
+                            {% endif %}
+                            {% endfor %}
+                            </div>
+                        </div>
+                    {% endif %}
                     <div class="row-flex stretch">
                         <div x-town-details="{{ town.id }}" class="padded cell rw-12 hidden" style="background-color: #3b3249;">
                             <ul class="citizen-list">
@@ -128,6 +139,10 @@
         $.html.addEventListenerAll( '[x-town-toggle]', 'click', function(e,elem) {
             const id = elem.getAttribute('x-town-toggle');
             document.querySelectorAll('[x-town-details="' + id + '"]').forEach(function( target ) {
+                if (target.classList.contains('hidden')) target.classList.remove('hidden');
+                else target.classList.add('hidden');
+            })
+            document.querySelectorAll('[x-town-latest="' + id + '"]').forEach(function( target ) {
                 if (target.classList.contains('hidden')) target.classList.remove('hidden');
                 else target.classList.add('hidden');
             })
