Reworked workshop bonus, improve display of town upgrades

--- a/assets/less/modules/town.less
+++ b/assets/less/modules/town.less
@@ -198,6 +198,14 @@ div.town-banner {
       background-color: #b37c4a;
     }
   }
+
+
+}
+
+.town-upgrades {
+  .row {
+    border-bottom: 1px solid @myhordes-panel-bg;
+  }
 }
 
 .town-buildings {
