--- a/templates/ajax/forum/search.html.twig
+++ b/templates/ajax/forum/search.html.twig
@@ -86,7 +86,7 @@
     {{ include('ajax/flash.html.twig') }}
     <script>
         $.html.addEventListenerAll('#search-begin-btn', 'click', () => $.ajax.no_history().load( document.getElementById('search-results'), '{{ path('forum_query_controller')|e('js') }}', false, {
-            fid: document.querySelector('#search-forum').value,
+            fid: parseInt(document.querySelector('#search-forum').value),
             query: document.querySelector('#search-query').value,
             opt_title: document.querySelector('#search-opt-title').checked ? 1 : 0,
             user: document.querySelector('[x-selected-user]') ? parseInt(document.querySelector('[x-selected-user]').getAttribute('x-selected-user')) : -1
