--- a/assets/less/theme.less
+++ b/assets/less/theme.less
@@ -714,13 +714,9 @@ ul.inventory {
   }
   &.bank {
     background: url("../img/background/inventory/inv_bank.gif") repeat center; min-height: 100px;
+    &.theft { background: #7e3f39; }
     .item {
-      .item-icon {
-        display: inline-block;
-        width: 16px;
-        height: 16px;
-        text-align: center;
-      }
+      .item-icon { display: inline-block; width: 16px; height: 16px; text-align: center; }
       &.defense { border: 1px dotted @myhordes-smalltext; }
     }
   }
