--- a/templates/scripts/errors/inventory.txt.twig
+++ b/templates/scripts/errors/inventory.txt.twig
@@ -11,3 +11,4 @@
 {{ constant('App\\Service\\InventoryHandler::ErrorEscortDropForbidden') }}    : '{{'Von diesem Gegenstand will sich der Bürger nicht trennen.'|trans({},'game')|e('js')}}',
 {{ constant('App\\Service\\InventoryHandler::ErrorEssentialItemBlocked') }}    : '{{'Das kannst du mit einem Berufsgegenstand nicht tun.'|trans({},'game')|e('js')}}',
 {{ constant('App\\Service\\InventoryHandler::ErrorTooManySouls') }}    : '{{'Du kannst nicht mehr als eine Seele tragen.'|trans({},'game')|e('js')}}',
+{{ constant('App\\Service\\InventoryHandler::ErrorBankTheftFailed') }}    : '{{'Dein Diebstahlversuch ist gescheitert! Du bist entdeckt worden!'|trans({},'game')|e('js')}}',
