--- a/templates/ajax/soul/season.html.twig
+++ b/templates/ajax/soul/season.html.twig
@@ -105,7 +105,7 @@
                 {% endfor %}
             </div>
             {% else %}
-                <div class="note note-critical">Es wurde noch keine Stadt in die Rangliste aufgenommen! </div>
+                <div class="note note-critical">{{ 'Es wurde noch keine Stadt in die Rangliste aufgenommen!'|trans({},'global') }}</div>
             {% endif %}
         </div>
     </div>
