--- a/templates/ajax/game/inventory.html.twig
+++ b/templates/ajax/game/inventory.html.twig
@@ -27,7 +27,11 @@
             {% endfor %}
         {% endif %}
         {% if plus is defined and plus %}
-            <li class="item plus" {% if escort is not null%}x-escort-id="{{ escort }}"{% endif%} ><img alt="+" src="{{ asset('build/images/icons/small_more.gif') }}" /></li>
+            <li class="item plus" {% if escort is not null%}x-escort-id="{{ escort }}"{% endif%} ><img alt="+" src="{{ asset('build/images/icons/small_more.gif') }}" />
+                {% if owner is defined and owner %}
+                    <div class="tooltip">{{ '%citizen% bitten etwas aufzuheben.'|trans({'%citizen%': owner.user.name},'game') }}</div>
+                {% endif %}
+            </li>
         {% endif %}
     {% else %}
         {% for category,list in items %}
